# sel_auto

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/sel_auto/: 测试请求全国公共资源交易平台.py
src/tools/: Anti1.0.3.crx  edge_browser.py
tests/: 1.py
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-0817808e-4ce8-4f19-9aef-d21ab6c9e4c5/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-1a459666-3108-4f71-bc35-162dc5f360f8/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-1c636fc1-500d-431a-8b00-40de1582b425/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-1ccac2f7-3e9f-4435-8695-91fe1582c993/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-1f228b45-b091-4410-8367-e3158ac2d287/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-2e998b96-fb6b-4c42-a0cf-45523ef1b79b/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-329f338b-2fae-45cf-a32a-a51e7f25fc04/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-34c10513-71e8-451b-8a06-cc378185702c/: har_entry  request  response
tests/logs/.seleniumwire/storage-278793e4-1fe1-49ac-844c-a14dff5e19ca/request-34e98852-d568-4a1b-9f66-2d47939a5db1/: har_entry  request  response
(+975 files in other folders)
